<resources>
    <string name="app_name">GoogleBooksCleanArchitecture</string>
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="by_author">By Author</string>
    <string name="_0_pages">0 Pages</string>
    <string name="_0_reviews">0 Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
</resources>