<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="book"
            type="com.example.googlebookscleanarchitecture.data.model.db.Book" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                app:titleEnabled="true"
                app:title="@{book.bookInfo.title}">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/image_background"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/container_bg" />

                    <ImageView
                        android:id="@+id/book_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="8dp"
                        android:bookThumbnail="@{book.bookInfo.imageLinks.thumbnail}"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@mipmap/default_moive_poster" />

                    <TextView
                        android:id="@+id/book_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@{book.bookInfo.title , default=`Book Title`}"
                        android:textColor="@color/darkTextColor"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="@+id/image_background"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
                        app:layout_constraintTop_toTopOf="@+id/image_background" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/book_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/by_author"
                        android:textColor="@color/darkTextColor"
                        android:bookAuthor="@{book.bookInfo.authors[0]}"
                        app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
                        app:layout_constraintTop_toBottomOf="@+id/book_title" />

                    <RatingBar
                        android:id="@+id/book_rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:bookRate="@{book.bookInfo.averageRating}"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
                        app:layout_constraintTop_toBottomOf="@+id/book_author" />

                    <TextView
                        android:id="@+id/book_page_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_0_pages"
                        android:textColor="@color/darkTextColor"
                        android:bookPageCount="@{book.bookInfo.pageCount}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
                        app:layout_constraintTop_toBottomOf="@+id/book_rating_bar"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/book_reviews_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_0_reviews"
                        android:textColor="@color/darkTextColor"
                        android:bookReviews="@{book.bookInfo.ratingsCount}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/book_page_count"
                        app:layout_constraintTop_toBottomOf="@+id/book_rating_bar"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin">
                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            app:elevation="6dp"
            android:src="@drawable/ic_un_favorite"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.cardview.widget.CardView
                android:id="@+id/description_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                android:background="@color/lightBackgroundColor">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkTextColor"
                    android:padding="10dp"
                    android:text="@{book.bookInfo.description}"
                    android:textSize="18sp"
                    android:fontFamily="casual"/>


            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>